--- a/DataCommsEchoChatClient/DataCommsEchoChatClient.csproj
+++ b/DataCommsEchoChatClient/DataCommsEchoChatClient.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2752ED61-CEC5-4ED0-B62A-AF8C6FD00014}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DataCommsChatClient</RootNamespace>
-    <AssemblyName>DataCommsChatClient</AssemblyName>
+    <RootNamespace>DataCommsEchoChatClient</RootNamespace>
+    <AssemblyName>DataCommsEchoChatClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
