--- a/DataCommsFTPClient/DataCommsFTPClient.csproj
+++ b/DataCommsFTPClient/DataCommsFTPClient.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2752ED61-CEC5-4ED0-B62A-AF8C6FD00014}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>DataCommsEchoChatClient</RootNamespace>
-    <AssemblyName>DataCommsEchoChatClient</AssemblyName>
+    <RootNamespace>DataCommsFTPClient</RootNamespace>
+    <AssemblyName>DataCommsFTPClient</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimpleEchoClient.cs" />
+    <Compile Include="SimpleFTPClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
